Minimal http server for the example