@@ -49,7 +49,20 @@
                     <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                    <configuration>
+                        <mainClass>io.zeromagic.fullstack.Main</mainClass> 
+                        <executable>java</executable>
+                        <arguments>
+                            <argument>--enable-preview</argument>
+                            <argument>-classpath</argument>
+                            <classpath/>
+                            <argument>io.zeromagic.fullstack.Main</argument>
+                        </arguments>
+                    </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
